--- a/Projekty/Readme
+++ b/Projekty/Readme
@@ -1,3 +1,4 @@
-1. Mobilny Barman.
+1. Mobilny Barman
 Wspólny projekt inżynierksi. Byłem odpowiedzialny za komunikację pojazdu z telefonem, sterowanie pojazdem oraz montaż elektryczny.
-2. Samodzielnie wykonany projekt.
+2.Omijacz
+Samodzielnie wykonany projekt.
