--- a/Projekty/Readme
+++ b/Projekty/Readme
@@ -1,4 +1,4 @@
 1. Mobilny Barman
 Wspólny projekt inżynierksi. Byłem odpowiedzialny za komunikację pojazdu z telefonem, sterowanie pojazdem oraz montaż elektryczny.
 2.Omijacz
-Samodzielnie wykonany projekt.
+Samodzielnie wykonany projekt na seminarium naukowe w Konopnicy 2023r.
